# rust-etcd-utils

./: CHANGELOG.md  Cargo.toml  LICENSING.md  README.md  compose.yaml
.github/workflows/: release.yml  test.yml
example/: Cargo.toml
src/: lease.rs  lib.rs  lock.rs  log.rs  mod.rs  retry.rs  watcher.rs
src/sync/: watch.rs
tests/: common.rs  test_lease.rs  test_lock.rs  test_log.rs
