[package]
name = "rust-etcd-utils"
version = "0.7.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
etcd-client = "0.14.0"
futures = "0.3.31"
rand = "0.8.5"
retry = "2.0.0"
serde = "1.0.215"
serde_json = "1.0.133"
thiserror = "2.0.3"
tokio = { version = "1.38.0", features = ["rt-multi-thread", "time", "sync"] }
tokio-stream = "0.1.16"
tonic = "0.12.3"
tracing = "0.1.40"

[dev-dependencies]
tracing-subscriber = { version = "0.3.1", features = ["ansi", "env-filter"] }