[package]
name = "rust-etcd-utils"
version = "0.11.0"
authors = [
    "Triton One",
    "Louis-Vincent Boudreault"
]
publish = true
edition = "2021"
description = "A set of utilities for working with etcd in Rust."
license = "AGPL-3.0"
homepage = "https://triton.one"
repository = "https://github.com/rpcpool/rust-etcd-utils"


[dependencies]
async-trait = "~0.1.83"
etcd-client = "~0.15.0"
futures = "~0.3.31"
rand = "~0.8.5"
retry = "^2.0.0"
serde = { version = "^1.0.215", features = ["derive"] }
serde_json = "^1.0.133"
thiserror = "^2.0.3"
tokio = { version = "^1.44.2", features = ["rt-multi-thread", "time", "sync"] }
tokio-stream = "~0.1.16"
tonic = "~0.12.3"
tracing = "~0.1.40"

[dev-dependencies]
tracing-subscriber = { version = "~0.3.1", features = ["ansi", "env-filter"] }