[package]
name = "rust-etcd-utils"
version = "0.13.0"
authors = [
    "Triton One",
    "Louis-Vincent Boudreault"
]
publish = true
edition = "2024"
description = "A set of utilities for working with etcd in Rust."
license = "AGPL-3.0"
homepage = "https://triton.one"
repository = "https://github.com/rpcpool/rust-etcd-utils"


[dependencies]
async-trait = "^0.1.83"
etcd-client = "^0.17.0"
futures = "^0.3.31"
rand = "^0.8.5"
retry = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "time", "sync"] }
tokio-stream = "^0.1.16"
tonic = "^0.14.2"
tracing = "^0.1.40"

[dev-dependencies]
tracing-subscriber = { version = "^0.3.1", features = ["ansi", "env-filter"] }